--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 h1{
     text-align: center;
+    color:rgb(84, 83, 83)
+    
 }
 header{
     background-color:  red;
@@ -19,7 +21,7 @@ header nav a{
     nav-left: 20px;
     margin-top:2px;
 }
-header nav{
+ header nav{
     text-align: left;
 }
 
@@ -27,9 +29,11 @@ header nav{
     display:block;
     margin:0 auto 20px;
     width:150px;
-}
+    size:15px;
+    margin-bottom:10px;
+} 
 
-.image{
+/* .image{
     
     margin-right:20px;
     margin-top:25px;
@@ -40,7 +44,7 @@ header nav{
     flex-direction:column;
     position:relative;
     background-color: blue;
-    Opacity:1px;
+    Opacity:0px;
    
 }
 
@@ -69,7 +73,7 @@ header nav{
     width:50%;
     font-size:16px;
 
-} 
+}  */
 
 /* .inner-div h2{
     display:flex;
@@ -83,11 +87,79 @@ header nav{
     margin-left:50px;
 
 } */
-.outer-div {
+/* .outer-div {
     align-items:center;
     display:flex;
     /* background-color:rgb(255,255,255,0.5); */
-}
+    .main-container {
+        padding: 0 60px;
+      }
+
+      .main-container .top-div {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        background: #f2f2f2;
+        width: 100%;
+        margin-top: 37px;
+        height: 410px;
+      }
+
+      .line {
+        border: 1.5px solid #b40909;
+        width: 25%;
+        margin: 10px 0;
+      }
+
+      .top-div .image-div {
+        height: 100%;
+        -webkit-box-shadow: 1px 1px 5px 0px rgba(140, 138, 140, 1);
+        -moz-box-shadow: 1px 1px 5px 0px rgba(140, 138, 140, 1);
+        box-shadow: 1px 1px 5px 0px rgba(140, 138, 140, 1);
+        
+      }
+      .image-div img {
+        width: 100%;
+        height: 100%;
+        margin-right:20px;
+      }
+
+      .content-div {
+        padding: 0 30px;
+      }
+
+      .content-div .heading {
+        margin-top: 30px;
+        line-height: 35px;
+        font-size: 25px;
+        font-weight: 500px;
+        color: #051e3b;
+      }
+
+      .top-div p {
+        color: #454545;
+        font-weight: 400;
+      }
+ .person{
+    
+    align-items:25px;
+    
+ }
+ .person img{
+     margin-top:50px;
+     margin-right:20px
+     
+ }
+ .person h3{
+    margin-left:65px;
+ }
+    
+ .person p{
+    margin-left:100px;
+ }
+     
+ .footer{
+    background-color: rgb(1, 1, 58);
+ }
 body{
     margin:0;
     font-family:Arial,sans-serif;
